--- a/examples/reports.tex
+++ b/examples/reports.tex
@@ -23,7 +23,7 @@
 \maketitle%
 
                 \begin{abstract}
-                This raport has been generated with AutoPrep using
+                This raport has been generated with AutoPrep.
                 \end{abstract}
             %
 \tableofcontents%
@@ -51,9 +51,9 @@ Physical Cores&8\\%
 Logical Cores&8\\%
 CPU Frequency (MHz)&4056\\%
 Total RAM (GB)&16.0000\\%
-Available RAM (GB)&4.4831\\%
+Available RAM (GB)&4.7938\\%
 Total Disk Space (GB)&460.4317\\%
-Free Disk Space (GB)&263.8063\\%
+Free Disk Space (GB)&263.7565\\%
 \hline%
 \end{tabular}%
 \end{center}%
